force-app/main/default/objects/Snag_Item__c/Snag_Item__c.object-meta.xml
<CustomObject>
    <label>Snag Item</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>Snag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snag Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>