force-app/main/default/objects/Snag_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Snags Assigned</relationshipLabel>
    <relationshipName>Snags_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>