force-app/main/default/objects/Snag_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Electrical</fullName><default>false</default><label>Electrical</label></value>
            <value><fullName>Plumbing</fullName><default>false</default><label>Plumbing</label></value>
            <value><fullName>Carpentry</fullName><default>false</default><label>Carpentry</label></value>
            <value><fullName>Flooring</fullName><default>false</default><label>Flooring</label></value>
            <value><fullName>Paint</fullName><default>false</default><label>Paint</label></value>
            <value><fullName>HVAC</fullName><default>false</default><label>HVAC</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>