force-app/main/default/objects/Snag_Item__c/fields/Possession__c.field-meta.xml
<CustomField>
    <fullName>Possession__c</fullName>
    <label>Possession</label>
    <referenceTo>Possession__c</referenceTo>
    <relationshipLabel>Snag Items</relationshipLabel>
    <relationshipName>Snag_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>