force-app/main/default/objects/Snag_Item__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <label>Reported Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>