force-app/main/default/objects/Snag_Item__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Minor</fullName><default>true</default><label>Minor</label></value>
            <value><fullName>Major</fullName><default>false</default><label>Major</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>